--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "coderconf.org-website",
+  "homepage": "http://coderconf.org/",
+  "version": "0.0.2",
+  "private": true,
+  "license": "MIT",
+  "scripts": {
+    "build": "gulp build",
+    "http": "http-server ./dist -p 3000 -a 127.0.0.1 -o",
+    "test": "gulp archive && mocha --reporter spec --timeout 5000"
+  },
   "devDependencies": {
     "@alrra/travis-scripts": "^1.1.1",
     "apache-server-configs": "2.14.0",
@@ -13,7 +23,7 @@
     "gulp-load-plugins": "^1.1.0",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.3",
-    "gulp-watch": "^4.3.5",
+    "http-server": "^0.9.0",
     "jquery": "1.12.0",
     "jshint": "^2.8.0",
     "jshint-stylish": "^2.0.1",
@@ -31,17 +41,5 @@
       "src": "src",
       "test": "test"
     }
-  },
-  "homepage": "https://html5boilerplate.com/",
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/h5bp/html5-boilerplate/blob/master/LICENSE.txt"
-  },
-  "name": "html5-boilerplate",
-  "private": true,
-  "scripts": {
-    "build": "gulp build",
-    "test": "gulp archive && mocha --reporter spec --timeout 5000"
-  },
-  "version": "5.3.0"
+  }
 }
